--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -963,8 +963,10 @@ section {
 /*--------------------------------------------------------------
 # Testimonials Section
 --------------------------------------------------------------*/
-.testimonials .section-header {
-  margin-bottom: 40px;
+.testimonials .section-header h3{
+  font-size: 36px;
+  font-weight: 600;
+  color: #f17228;
 }
 
 .testimonials .testimonials-carousel,
@@ -1201,6 +1203,7 @@ section {
   color: rgba(33, 37, 41, 0.7);
 }
 
+
 .chefs .chef-member:hover {
   transform: scale(1.08);
   box-shadow: 0px 0 30px rgba(55, 55, 63, 0.15);
@@ -1210,6 +1213,7 @@ section {
   right: 8px;
   opacity: 1;
 }
+
 
 /*--------------------------------------------------------------
 # Book A Table Section
